2001-09-20  Tim Van Holder  <tim.van.holder@pandora.be>

	* man/Makefile.am (.x.1): Use @PATH_SEPARATOR@, not ':' to set up
	$PATH.  Also set AUTOM4TE_CFG, so we can process autom4te properly.

2001-09-20  Tim Van Holder  <tim.van.holder@pandora.be>

	* bin/autoscan.in: Add 'exec-perl-if-not-run-by-perl'.
	* bin/autoupdate.in: Ditto.
	* bin/autoheader.in: Reworded a few comments.
	* bin/autoconf.in: Reworded help text for a few options.
	* bin/autoheader.in, bin/autom4te.in, bin/autoreconf.in,
	* bin/autoscan.in, bin/autoupdate.in: Ditto.

2001-09-20  Tim Van Holder  <tim.van.holder@pandora.be>

	* lib/Autom4te/XFile.pm (open): Simplified the error message (we
	already have $file).  Set output files to binary mode (helps avoid
	CR issues on DOSish systems).

2001-09-19  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4: Englishoes.
	From Tim Van Holder and Alexey Mahotkin.

2001-09-18  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Common Shell Constructs): New node,
	documenting AS_DIRNAME.
	(Limitations of Usual Tools): Refer to it when discussing dirname.
	Also, update discussion of POSIX standard to reflect latest draft.

	* lib/autoconf/c.m4:
	(AC_LANG_INT_SAVE(C)): Also support negative values, down to LONG_MIN.

	* lib/autoconf/general.m4 (_AC_COMPUTE_INT_COMPILE):
	Do not pass a first argument with leading '-'
	to expr, by parenthesizing initial integers that might be negative.

	* doc/autoconf.texi (Particular Functions): AC_FUNC_GETPGRP
	now merely checks whether it is an error to pass an argument
	to getpgrp.

	* lib/autoconf/functions.m4 (_AC_FUNC_GETPGRP_TEST): Remove.
	(AC_FUNC_GETPGRP): Don't bother with a runtime test.  Just check
	whether it is a (compile-time) error to pass an argument to
	getpgrp.  This simpler test supports the revised documentation,
	and is all that AC_FUNC_GETPGRP's users really need.

2001-09-18  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Make) <$<>: New.
